begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.yarn.api.protocolrecords.impl.pb
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|impl
operator|.
name|pb
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|GetQueueInfoRequest
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ProtoBase
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServiceProtos
operator|.
name|GetQueueInfoRequestProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServiceProtos
operator|.
name|GetQueueInfoRequestProtoOrBuilder
import|;
end_import

begin_class
DECL|class|GetQueueInfoRequestPBImpl
specifier|public
class|class
name|GetQueueInfoRequestPBImpl
extends|extends
name|ProtoBase
argument_list|<
name|GetQueueInfoRequestProto
argument_list|>
implements|implements
name|GetQueueInfoRequest
block|{
DECL|field|proto
name|GetQueueInfoRequestProto
name|proto
init|=
name|GetQueueInfoRequestProto
operator|.
name|getDefaultInstance
argument_list|()
decl_stmt|;
DECL|field|builder
name|GetQueueInfoRequestProto
operator|.
name|Builder
name|builder
init|=
literal|null
decl_stmt|;
DECL|field|viaProto
name|boolean
name|viaProto
init|=
literal|false
decl_stmt|;
DECL|method|GetQueueInfoRequestPBImpl ()
specifier|public
name|GetQueueInfoRequestPBImpl
parameter_list|()
block|{
name|builder
operator|=
name|GetQueueInfoRequestProto
operator|.
name|newBuilder
argument_list|()
expr_stmt|;
block|}
DECL|method|GetQueueInfoRequestPBImpl (GetQueueInfoRequestProto proto)
specifier|public
name|GetQueueInfoRequestPBImpl
parameter_list|(
name|GetQueueInfoRequestProto
name|proto
parameter_list|)
block|{
name|this
operator|.
name|proto
operator|=
name|proto
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|getIncludeApplications ()
specifier|public
name|boolean
name|getIncludeApplications
parameter_list|()
block|{
name|GetQueueInfoRequestProtoOrBuilder
name|p
init|=
name|viaProto
condition|?
name|proto
else|:
name|builder
decl_stmt|;
return|return
operator|(
name|p
operator|.
name|hasIncludeApplications
argument_list|()
operator|)
condition|?
name|p
operator|.
name|getIncludeApplications
argument_list|()
else|:
literal|false
return|;
block|}
annotation|@
name|Override
DECL|method|getIncludeChildQueues ()
specifier|public
name|boolean
name|getIncludeChildQueues
parameter_list|()
block|{
name|GetQueueInfoRequestProtoOrBuilder
name|p
init|=
name|viaProto
condition|?
name|proto
else|:
name|builder
decl_stmt|;
return|return
operator|(
name|p
operator|.
name|hasIncludeChildQueues
argument_list|()
operator|)
condition|?
name|p
operator|.
name|getIncludeChildQueues
argument_list|()
else|:
literal|false
return|;
block|}
annotation|@
name|Override
DECL|method|getQueueName ()
specifier|public
name|String
name|getQueueName
parameter_list|()
block|{
name|GetQueueInfoRequestProtoOrBuilder
name|p
init|=
name|viaProto
condition|?
name|proto
else|:
name|builder
decl_stmt|;
return|return
operator|(
name|p
operator|.
name|hasQueueName
argument_list|()
operator|)
condition|?
name|p
operator|.
name|getQueueName
argument_list|()
else|:
literal|null
return|;
block|}
annotation|@
name|Override
DECL|method|getRecursive ()
specifier|public
name|boolean
name|getRecursive
parameter_list|()
block|{
name|GetQueueInfoRequestProtoOrBuilder
name|p
init|=
name|viaProto
condition|?
name|proto
else|:
name|builder
decl_stmt|;
return|return
operator|(
name|p
operator|.
name|hasRecursive
argument_list|()
operator|)
condition|?
name|p
operator|.
name|getRecursive
argument_list|()
else|:
literal|false
return|;
block|}
annotation|@
name|Override
DECL|method|setIncludeApplications (boolean includeApplications)
specifier|public
name|void
name|setIncludeApplications
parameter_list|(
name|boolean
name|includeApplications
parameter_list|)
block|{
name|maybeInitBuilder
argument_list|()
expr_stmt|;
name|builder
operator|.
name|setIncludeApplications
argument_list|(
name|includeApplications
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|setIncludeChildQueues (boolean includeChildQueues)
specifier|public
name|void
name|setIncludeChildQueues
parameter_list|(
name|boolean
name|includeChildQueues
parameter_list|)
block|{
name|maybeInitBuilder
argument_list|()
expr_stmt|;
name|builder
operator|.
name|setIncludeChildQueues
argument_list|(
name|includeChildQueues
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|setQueueName (String queueName)
specifier|public
name|void
name|setQueueName
parameter_list|(
name|String
name|queueName
parameter_list|)
block|{
name|maybeInitBuilder
argument_list|()
expr_stmt|;
if|if
condition|(
name|queueName
operator|==
literal|null
condition|)
block|{
name|builder
operator|.
name|clearQueueName
argument_list|()
expr_stmt|;
return|return;
block|}
name|builder
operator|.
name|setQueueName
argument_list|(
operator|(
name|queueName
operator|)
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|setRecursive (boolean recursive)
specifier|public
name|void
name|setRecursive
parameter_list|(
name|boolean
name|recursive
parameter_list|)
block|{
name|maybeInitBuilder
argument_list|()
expr_stmt|;
name|builder
operator|.
name|setRecursive
argument_list|(
name|recursive
argument_list|)
expr_stmt|;
block|}
DECL|method|maybeInitBuilder ()
specifier|private
name|void
name|maybeInitBuilder
parameter_list|()
block|{
if|if
condition|(
name|viaProto
operator|||
name|builder
operator|==
literal|null
condition|)
block|{
name|builder
operator|=
name|GetQueueInfoRequestProto
operator|.
name|newBuilder
argument_list|(
name|proto
argument_list|)
expr_stmt|;
block|}
name|viaProto
operator|=
literal|false
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|getProto ()
specifier|public
name|GetQueueInfoRequestProto
name|getProto
parameter_list|()
block|{
name|proto
operator|=
name|viaProto
condition|?
name|proto
else|:
name|builder
operator|.
name|build
argument_list|()
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
return|return
name|proto
return|;
block|}
block|}
end_class

end_unit

