begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.yarn.api
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
package|;
end_package

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Assert
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ApplicationAttemptId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ApplicationId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ContainerId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ContainerResourceDecrease
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|Resource
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|impl
operator|.
name|pb
operator|.
name|ContainerResourceDecreasePBImpl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnProtos
operator|.
name|ContainerResourceDecreaseProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_class
DECL|class|TestContainerResourceDecrease
specifier|public
class|class
name|TestContainerResourceDecrease
block|{
annotation|@
name|Test
DECL|method|testResourceDecreaseContext ()
specifier|public
name|void
name|testResourceDecreaseContext
parameter_list|()
block|{
name|ContainerId
name|containerId
init|=
name|ContainerId
operator|.
name|newInstance
argument_list|(
name|ApplicationAttemptId
operator|.
name|newInstance
argument_list|(
name|ApplicationId
operator|.
name|newInstance
argument_list|(
literal|1234
argument_list|,
literal|3
argument_list|)
argument_list|,
literal|3
argument_list|)
argument_list|,
literal|7
argument_list|)
decl_stmt|;
name|Resource
name|resource
init|=
name|Resource
operator|.
name|newInstance
argument_list|(
literal|1023
argument_list|,
literal|3
argument_list|)
decl_stmt|;
name|ContainerResourceDecrease
name|ctx
init|=
name|ContainerResourceDecrease
operator|.
name|newInstance
argument_list|(
name|containerId
argument_list|,
name|resource
argument_list|)
decl_stmt|;
comment|// get proto and recover to ctx
name|ContainerResourceDecreaseProto
name|proto
init|=
operator|(
operator|(
name|ContainerResourceDecreasePBImpl
operator|)
name|ctx
operator|)
operator|.
name|getProto
argument_list|()
decl_stmt|;
name|ctx
operator|=
operator|new
name|ContainerResourceDecreasePBImpl
argument_list|(
name|proto
argument_list|)
expr_stmt|;
comment|// check values
name|Assert
operator|.
name|assertEquals
argument_list|(
name|ctx
operator|.
name|getCapability
argument_list|()
argument_list|,
name|resource
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|ctx
operator|.
name|getContainerId
argument_list|()
argument_list|,
name|containerId
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testResourceDecreaseContextWithNull ()
specifier|public
name|void
name|testResourceDecreaseContextWithNull
parameter_list|()
block|{
name|ContainerResourceDecrease
name|ctx
init|=
name|ContainerResourceDecrease
operator|.
name|newInstance
argument_list|(
literal|null
argument_list|,
literal|null
argument_list|)
decl_stmt|;
comment|// get proto and recover to ctx;
name|ContainerResourceDecreaseProto
name|proto
init|=
operator|(
operator|(
name|ContainerResourceDecreasePBImpl
operator|)
name|ctx
operator|)
operator|.
name|getProto
argument_list|()
decl_stmt|;
name|ctx
operator|=
operator|new
name|ContainerResourceDecreasePBImpl
argument_list|(
name|proto
argument_list|)
expr_stmt|;
comment|// check values
name|Assert
operator|.
name|assertNull
argument_list|(
name|ctx
operator|.
name|getCapability
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertNull
argument_list|(
name|ctx
operator|.
name|getContainerId
argument_list|()
argument_list|)
expr_stmt|;
block|}
block|}
end_class

end_unit

