begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.yarn.api
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
package|;
end_package

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Arrays
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Assert
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ApplicationAttemptId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ApplicationId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ContainerId
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|ContainerResourceIncrease
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|Resource
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|Token
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|impl
operator|.
name|pb
operator|.
name|ContainerResourceIncreasePBImpl
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnProtos
operator|.
name|ContainerResourceIncreaseProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_class
DECL|class|TestContainerResourceIncrease
specifier|public
class|class
name|TestContainerResourceIncrease
block|{
annotation|@
name|Test
DECL|method|testResourceIncreaseContext ()
specifier|public
name|void
name|testResourceIncreaseContext
parameter_list|()
block|{
name|byte
index|[]
name|identifier
init|=
operator|new
name|byte
index|[]
block|{
literal|1
block|,
literal|2
block|,
literal|3
block|,
literal|4
block|}
decl_stmt|;
name|Token
name|token
init|=
name|Token
operator|.
name|newInstance
argument_list|(
name|identifier
argument_list|,
literal|""
argument_list|,
literal|""
operator|.
name|getBytes
argument_list|()
argument_list|,
literal|""
argument_list|)
decl_stmt|;
name|ContainerId
name|containerId
init|=
name|ContainerId
operator|.
name|newInstance
argument_list|(
name|ApplicationAttemptId
operator|.
name|newInstance
argument_list|(
name|ApplicationId
operator|.
name|newInstance
argument_list|(
literal|1234
argument_list|,
literal|3
argument_list|)
argument_list|,
literal|3
argument_list|)
argument_list|,
literal|7
argument_list|)
decl_stmt|;
name|Resource
name|resource
init|=
name|Resource
operator|.
name|newInstance
argument_list|(
literal|1023
argument_list|,
literal|3
argument_list|)
decl_stmt|;
name|ContainerResourceIncrease
name|ctx
init|=
name|ContainerResourceIncrease
operator|.
name|newInstance
argument_list|(
name|containerId
argument_list|,
name|resource
argument_list|,
name|token
argument_list|)
decl_stmt|;
comment|// get proto and recover to ctx
name|ContainerResourceIncreaseProto
name|proto
init|=
operator|(
operator|(
name|ContainerResourceIncreasePBImpl
operator|)
name|ctx
operator|)
operator|.
name|getProto
argument_list|()
decl_stmt|;
name|ctx
operator|=
operator|new
name|ContainerResourceIncreasePBImpl
argument_list|(
name|proto
argument_list|)
expr_stmt|;
comment|// check values
name|Assert
operator|.
name|assertEquals
argument_list|(
name|ctx
operator|.
name|getCapability
argument_list|()
argument_list|,
name|resource
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|ctx
operator|.
name|getContainerId
argument_list|()
argument_list|,
name|containerId
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|Arrays
operator|.
name|equals
argument_list|(
name|ctx
operator|.
name|getContainerToken
argument_list|()
operator|.
name|getIdentifier
argument_list|()
operator|.
name|array
argument_list|()
argument_list|,
name|identifier
argument_list|)
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testResourceIncreaseContextWithNull ()
specifier|public
name|void
name|testResourceIncreaseContextWithNull
parameter_list|()
block|{
name|ContainerResourceIncrease
name|ctx
init|=
name|ContainerResourceIncrease
operator|.
name|newInstance
argument_list|(
literal|null
argument_list|,
literal|null
argument_list|,
literal|null
argument_list|)
decl_stmt|;
comment|// get proto and recover to ctx;
name|ContainerResourceIncreaseProto
name|proto
init|=
operator|(
operator|(
name|ContainerResourceIncreasePBImpl
operator|)
name|ctx
operator|)
operator|.
name|getProto
argument_list|()
decl_stmt|;
name|ctx
operator|=
operator|new
name|ContainerResourceIncreasePBImpl
argument_list|(
name|proto
argument_list|)
expr_stmt|;
comment|// check values
name|Assert
operator|.
name|assertNull
argument_list|(
name|ctx
operator|.
name|getContainerToken
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertNull
argument_list|(
name|ctx
operator|.
name|getCapability
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertNull
argument_list|(
name|ctx
operator|.
name|getContainerId
argument_list|()
argument_list|)
expr_stmt|;
block|}
block|}
end_class

end_unit

